@@ -204,6 +204,10 @@ Zope Changes
 
     Bugs Fixed
 
+      - Launchpad #246748: added 'immediate' option to sendXXX() methods
+        for sending a mail immediately by-passing the zope.sendmail delivery
+        mechanism
+
       - Launchpad #246290: fixed backward compatibility issue
 
       - Launchpad #245649:  the Products package is now a proper
